// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
option java_package = "org.ditto.sexyimage.grpc";



message Error {
    string code = 1;
    string details = 2;
}


// Generic message sent when there is nothing else to send back
message StatusResponse {
    Error error = 1;
}

enum ImageType {
    NORMAL = 0;
    POSTER = 1;
    SEXY = 2;
    PORN = 3;
    SECRET = 4;
}

message ImageResponse {
    string url = 1;
    string infoUrl = 2;
    string title = 3;
    string desc = 4;
    ImageType type = 5;
    int64 lastUpdated = 6;
    bool active = 7;
}
