// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.intellij.plugins.sexyeditor.image";

// The image service definition.
service Image {

    // A server-to-client streaming RPC.
    //
    // Obtains the Images whose status are after the given lastUpdated.  Results are
    // streamed rather than returned at once (e.g. in a response message with a
    // repeated field), as the lastUpdated maybe an very old time and contain a
    // huge number of images.
    rpc ListImages (ImageRequest) returns (stream ImageResponse) {
    }
}

message ImageRequest {
    int64 afterLastUpdated = 1;
    int32 pageSize = 2;

}

message ImageResponse {
    string uuid = 1;
    string url = 2;
    string title = 3;
    string desc = 4;
    string type = 5;//NORMAL,SEXY,PORN

    int64 lastUpdated = 6;
    bool active = 7;
}